Regression: Blender creates unexpected selection areas when using Select Box or Select Lasso which can lead to crashes #109532

Closed
opened 2023-06-29 21:23:05 +02:00 by MVPuccino · 3 comments
First-time contributor

System Information
Operating system: ArchLinux (Plasma Wayland)
Graphics card: RX 580 8GB | 23.1.3-1

Blender Version
Broken: 3.6.0, c7fc78b81e, blender-v3.6-release, 2023-06-27 08:08
Worked: 3.5.1, e1ccd9d4a1, blender-v3.5-release, 2023-04-24 18:11

Short description of error
When returning to Blender after it not being the focused window trying to Select Box it'll produce a selection area that goes to the right and the bottom of the cursor, completing the selection will cause Blender to freeze and crash.

Same thing will happen in Select Lasso, but with Select Lasso the direction of the selection area appears to be random and it doesn't crash when letting go.

Opening Blender from the terminal and making it crash as explained gives a Segmentation fault (core dumped) error

This seems to be a Wayland-only issue as the unusual selections didn't happen on Xorg

Exact steps for others to reproduce the error

  1. Turn on Select Box or Lasso in selection
  2. Switch focus to another window
  3. Return to Blender and try to initiate a selection as your first click to refocus on it.

Workarounds
Make Blender run under Xwayland (On Flatpak this can be done by revoking Blender's access to Wayland)

Example is shown in attached video.

**System Information** Operating system: ArchLinux (Plasma Wayland) Graphics card: RX 580 8GB | 23.1.3-1 **Blender Version** Broken: 3.6.0, c7fc78b81ecb, blender-v3.6-release, 2023-06-27 08:08 Worked: 3.5.1, e1ccd9d4a1d3, blender-v3.5-release, 2023-04-24 18:11 **Short description of error** When returning to Blender after it not being the focused window trying to Select Box it'll produce a selection area that goes to the right and the bottom of the cursor, completing the selection will cause Blender to freeze and crash. Same thing will happen in Select Lasso, but with Select Lasso the direction of the selection area appears to be random and it doesn't crash when letting go. Opening Blender from the terminal and making it crash as explained gives a `Segmentation fault (core dumped)` error This seems to be a Wayland-only issue as the unusual selections didn't happen on Xorg **Exact steps for others to reproduce the error** 1. Turn on Select Box or Lasso in selection 1. Switch focus to another window 1. Return to Blender and try to initiate a selection as your first click to refocus on it. **Workarounds** Make Blender run under Xwayland (On Flatpak this can be done by revoking Blender's access to Wayland) Example is shown in attached video.
MVPuccino added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-29 21:23:05 +02:00
Iliya Katueshenock added the
Interest
User Interface
label 2023-06-29 21:28:25 +02:00
Member

Unable to confirm on Windows (3.6)

**System Information**
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 532.03
Unable to confirm on Windows (3.6) ``` **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 532.03 ```
Member

I suspect it's a problem with Flatpak packaging, it might have messed up 1 or more graphics related libraries, recently we have seen a few graphics-related bug reports that doesn't quite make sense nor having any reasonable connections to each other.

I suspect it's a problem with Flatpak packaging, it might have messed up 1 or more graphics related libraries, recently we have seen a few graphics-related bug reports that doesn't quite make sense nor having any reasonable connections to each other.
Author
First-time contributor

It happens with the native Pacman build of Archlinux as well the official binaries from the Blender website.

It happens with the native Pacman build of Archlinux as well the official binaries from the Blender website.
Pratik Borhade added the
Platform
Linux
label 2023-07-04 08:48:25 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-07-09 08:58:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109532
No description provided.